err/sucklesync.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/EasyProcess-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/daemonize-2.4.7.dist-info'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/easyprocess'...
Listing './lib/python3.5/site-packages/easyprocess/examples'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyzmail'...
Listing './lib/python3.5/site-packages/pyzmail/tests'...
Listing './lib/python3.5/site-packages/pyzmail-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sucklesync'...
Listing './lib/python3.5/site-packages/sucklesync/config'...
Compiling './lib/python3.5/site-packages/sucklesync/config/config.py'...
***   File "./lib/python3.5/site-packages/sucklesync/config/config.py", line 143
    print "[%s] '%s' missing key %d" % (section, key, previous_id + 1)
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sucklesync/utils'...
Compiling './lib/python3.5/site-packages/sucklesync/utils/debug.py'...
***   File "./lib/python3.5/site-packages/sucklesync/utils/debug.py", line 81
    print message % args
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sucklesync-0.3.8.egg-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/pyzmail-1.0.3'...
Listing './share/python-wheels'...
